frontend/tests/cases/negative/security/levelContractionWrongSpec.gr
language SecurityLevels
-- Should fail because Private + Public = Public

foo : Int [Private] → Int
foo [x] = weak__ x + (bar [x])
        -- x :Private Int   x :Public Int

-- A way to get a variable graded as Public above
bar : Int [Public] → Int
bar [x] = x
